# OPCUA_Demo_Server

Server_demo/: demo_server.py  pyproject.toml
Server_demo/Fleet Manager/: fleet_manager.py  subtasks.py  task_assignment.py
Server_demo/Fleet Manager/RAFT_client/: robot.py  ua-export.xml
Server_demo/Fleet Manager/config/: settings.py
Server_demo/client_demo/: client-rcs.py  client-robot.py  client_subscription.py  opc_vars.py  test.py
Server_demo/server_demo/: server.py
